WIP: save current changes